--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,5 @@ add_executable(CS316 section5/main.cpp
         section6/Fig14_13.cpp
         section8_g1/var_object.cpp
         section8_g2/test_data.cpp
+        quiz/quiz5.cpp
 )
