--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,4 +20,5 @@ add_executable(CS316 section5/main.cpp
         section8_g2/test_data.cpp
         quiz/quiz5.cpp
         quiz/quiz3.cpp
+        section9/sec9.cpp
 )
